--- a/src/components/modal/Modal/style.scss
+++ b/src/components/modal/Modal/style.scss
@@ -98,7 +98,7 @@
                     }
 
                     &:hover {
-                        background-color: #F67272;
+                        background-color: var(--body-bg-attention);
 
                         svg {
                             fill: #ffffff;
