--- a/src/components/modal/ModalDocOficial/style.scss
+++ b/src/components/modal/ModalDocOficial/style.scss
@@ -3,12 +3,13 @@
     flex-direction: column;
     justify-content: center;
     gap: 8px;
+    height: 100%;
 
     .details {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex: 1;
         gap: 20px;
         padding: 20px;
@@ -18,6 +19,7 @@
         }
 
         #desc {
+            font-size: 18px;
             text-align: center;
         }
     }
