--- a/src/app/(auth)/style.scss
+++ b/src/app/(auth)/style.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.container {
+.containerHome {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto;
@@ -27,7 +27,7 @@
 /* Alterações para Desktop */
 @media screen and (min-device-width: 768px),
 screen and (min-width: 768px) {
-    .container {
+    .containerHome {
         grid-template-areas:
             "header"
             "main"
@@ -43,7 +43,7 @@ screen and (min-width: 768px) {
 /* Alterações para Mobile I */
 @media screen and (max-device-width: 768px),
 screen and (max-width: 768px) {
-    .container {
+    .containerHome {
         grid-template-areas:
             "header"
             "main"
@@ -59,7 +59,7 @@ screen and (max-width: 768px) {
 /* Alterações para Mobile II */
 @media screen and (max-device-width: 480px),
 screen and (max-width: 480px) {
-    .container {
+    .containerHome {
         main {
             margin-top: 60px;
         }
