fix: icone pdf modal doc oficial

--- a/src/components/modal/ModalDocOficial/style.scss
+++ b/src/components/modal/ModalDocOficial/style.scss
@@ -16,7 +16,7 @@
 
         #icon {
             width: 40%;
-            height: fit-content;
+            height: auto;
         }
 
         #desc {
