--- a/src/components/modal/ModalDocOficial/style.scss
+++ b/src/components/modal/ModalDocOficial/style.scss
@@ -17,6 +17,7 @@
         #icon {
             width: 40%;
             height: auto;
+            object-fit: contain;
         }
 
         #desc {
