--- a/src/components/card/CardDocOficial/style.scss
+++ b/src/components/card/CardDocOficial/style.scss
@@ -17,7 +17,7 @@
     #desc {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        align-items: center;
         gap: 4px;
         overflow: hidden;
 
